fix(landing-page): team visual feedbacks fix

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -383,7 +383,7 @@
 </main>
 
 <div id="snackbar">
-  Este site usa cookies para garantir que você obtenha a melhor experiência em nosso site. 
+  Ao acessar nosso website esta aceitando as politicas de privacidade e cookies.
   <a href="../../assets/politica_cookies_ptbr.pdf" target="_blank">Saiba mais</a>
   <button type="button" (click)="hideSnackBar()" class="btn btn-outline-light">OK</button>
 </div>
