--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1241,15 +1241,20 @@ drag-scroll {
   color: #fff; /* White text color */
   text-align: center; /* Centered text */
   border-radius: 0.25rem; /* Rounded borders */
-  padding: 16px; /* Padding */
+  padding: 18px; /* Padding */
   position: fixed; /* Sit on top of the screen */
   z-index: 99999; /* Add a z-index if needed */
   left: 30%; /* Center the snackbar */
-  bottom: 30px; /* 30px from the bottom */
+  bottom: 0px; /* 30px from the bottom */
 }
 
-#snackbar button, #snackbar a  {
+#snackbar button {
     margin-left: 20px;
+    margin-top: 5px;
+}
+
+#snackbar a {
+    margin-left: 10px;    
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
