fix(routing / landing page): button redirect to host landing page and fix routing files

--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -118,7 +118,7 @@
     background-color: rgba(0, 0, 0, .3);
     position: relative;
     height: 50px;
-    margin: 0 15px !important;
+    margin: 10px 15px 15px 15px !important;
     box-sizing: border-box;
     flex: 0 0 96%;
     display: flex;
