--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -296,7 +296,7 @@
           <p>
             Viva uma experiência multicultural <br> hospedando intercambistas <br>voluntários
           </p>
-          <a class='btn btn-primary' target='_blank' href='http://promo.aiesec.org.br/sejamembro/'> Saiba mais sobre Lar Global </a>
+          <a class='btn btn-primary' (click)='goToHost()'> Saiba mais sobre Lar Global </a>
         </div>
       </div>
     </div>
