--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -523,6 +523,7 @@ div#our-stories {
             background-color: #ffc845;
             border: 0;
             font-size: 16px;
+            color: #fff;
         }
     }
 }
