--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -30,10 +30,7 @@
         <label for='fullname' [ngClass]='{"has-content": user.cellphone }'>Celular</label>
         <input type="tel" [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" mask="(00) 0000-00009" (blur)="checkPhone()"
           required>
-        <div *ngIf="isValid('cellphone')" class='error-message'>
-          Preencha o seu número de celular.
-        </div>
-        <div *ngIf="invalidPhone" class='error-message'>
+        <div *ngIf="invalidPhone || isValid('cellphone')" class='error-message'>
           Por favor, digite um número de celular válido.
         </div>
       </div>
@@ -88,36 +85,38 @@
           </div>
         </div>
       </div>
-      <div *ngIf="isValid('local_committee_id')" class='error-message'>
-        Selecione uma das opções
+      <div class='col-12'>
+        <div *ngIf="isValid('local_committee_id')" class='error-message'>
+          Selecione uma das opções
+        </div>
       </div>
       <!-- Terms -->
       <div id="content-terms" style='width: 100%;'>
-      <div class="row forms-term">
-        <div class="col-sm-12">
-          <div class="form-group">
-            <div class='forms-terms-area' (click)='openModal()'>
-              <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
-              <label class='form-group forms-tem-accepted info-mobile-content'>
-                Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
-                <br>
-                <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
-              </label>
+        <div class="row forms-term">
+          <div class="col-sm-12">
+            <div class="form-group">
+              <div class='forms-terms-area' (click)='openModal()'>
+                <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
+                <label class='form-group forms-tem-accepted info-mobile-content'>
+                  Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
+                  <br>
+                  <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
+                </label>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class='col-sm-12'>
-        <div class="form-group form-check text-center checkbox">
-          <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
-            formControlName="cellphone_contactable" name="cellphone_contactable">
-          <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
+        <div class='col-sm-12'>
+          <div class="form-group form-check text-center checkbox">
+            <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
+              formControlName="cellphone_contactable" name="cellphone_contactable">
+            <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
+          </div>
+          <button (click)='submit()' [ngClass]='{"not-allowed": unableToSubmit()}' [disabled]='unableToSubmit()'>
+            Enviar
+          </button>
         </div>
-        <button (click)='submit()' [ngClass]='{"not-allowed": unableToSubmit()}' [disabled]='unableToSubmit()'>
-          Enviar
-        </button>
       </div>
-    </div>
     </div>
   </form>
   <div class='loading-content' *ngIf='loading'>
