fix(landing-page): changed cookies snackbar's text

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -383,9 +383,9 @@
 </main>
 
 <div id="snackbar">
-  Ao acessar nosso website esta aceitando as politicas de privacidade e cookies.
-  <a href="../../assets/politica_cookies_ptbr.pdf" target="_blank">Saiba mais</a>
-  <button type="button" (click)="hideSnackBar()" class="btn btn-outline-light">OK</button>
+  Este site usa cookies para assegurar que você tenha uma ótima experiência online.
+  <a href="../../assets/politica_cookies_ptbr.pdf" target="_blank"><u>Saiba mais</u></a>
+  <button type="button" (click)="hideSnackBar()" class="btn btn-outline-light">Ok!</button>
 </div>
 
 <app-landing-footer></app-landing-footer>
