fix(landing pages): 'visao geral' content fixed

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -18,7 +18,7 @@
           <p>
             Pelo programa Lar Global da AIESEC você pode viver a uma experiência de aprendizado cultural e criar conexões internacionais
             ao se voluntarias para receber um intercambista por 6 a 12 semanas.
-            <br> Hospedar um intercambista é muito mais do que recebê-lo em casa, é viver a diversidade, aprender novas línguas
+            Hospedar um intercambista é muito mais do que recebê-lo em casa, é viver a diversidade, aprender novas línguas
             e costumes e valores.
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12">
