--- a/src/app/landing-page-ge/landing-page-ge.component.scss
+++ b/src/app/landing-page-ge/landing-page-ge.component.scss
@@ -353,7 +353,7 @@
                 font-size: 2em;
             }
             p {
-                font-size: 1.3em;
+                font-size: 20px;
                 line-height: 1.6em;
             }
         }
