--- a/src/app/landing-page-gt/landing-page-gt.component.scss
+++ b/src/app/landing-page-gt/landing-page-gt.component.scss
@@ -357,7 +357,7 @@
                 font-size: 2em;
             }
             p {
-                font-size: 1.3em;
+                font-size: 20px;
                 line-height: 1.6em;
             }
         }
