--- a/src/app/landing-page-gv/landing-page-gv.component.scss
+++ b/src/app/landing-page-gv/landing-page-gv.component.scss
@@ -331,7 +331,7 @@
                 font-size: 2em;
             }
             p {
-                font-size: 1.3em;
+                font-size: 20px;
                 line-height: 1.6em;
             }
         }
