chore(landing page host): contact list added to landing page host

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -17,9 +17,8 @@
           </h2>
           <p>
             Pelo programa Lar Global da AIESEC você pode viver a uma experiência de aprendizado cultural e criar conexões internacionais
-            ao se voluntarias para receber um intercambista por 6 a 12 semanas.
-            Hospedar um intercambista é muito mais do que recebê-lo em casa, é viver a diversidade, aprender novas línguas
-            e costumes e valores.
+            ao se voluntarias para receber um intercambista por 6 a 12 semanas. Hospedar um intercambista é muito mais do
+            que recebê-lo em casa, é viver a diversidade, aprender novas línguas e costumes e valores.
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -231,5 +230,6 @@
       </div>
     </div>
   </section>
+  <app-contact-list></app-contact-list>
 </main>
 <app-landing-footer></app-landing-footer>
