chore(landing page gv): contact list added to landing page gv

--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -244,5 +244,6 @@
       </div>
     </div>
   </section>
+  <app-contact-list></app-contact-list>
 </main>
 <app-landing-footer></app-landing-footer>
