chore(landing page gt): contact list added to landing page gt

--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -285,5 +285,6 @@
       </div>
     </div>
   </section>
+  <app-contact-list></app-contact-list>
 </main>
 <app-landing-footer></app-landing-footer>
