fix(forms *): fix form-group from terms and autocomplete-select display

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -94,10 +94,10 @@
       <div id="content-terms" style='width: 100%;'>
         <div class="row forms-term">
           <div class="col-sm-12">
-            <div class="form-group">
+            <div>
               <div class='forms-terms-area' (click)='openModal()'>
                 <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
-                <label class='form-group forms-tem-accepted info-mobile-content'>
+                <label class='forms-tem-accepted info-mobile-content'>
                   Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
                   <br>
                   <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
