--- a/src/app/form-gv-embedded/form-gv-embedded.component.html
+++ b/src/app/form-gv-embedded/form-gv-embedded.component.html
@@ -186,10 +186,10 @@
                 </div>
                 <div class="row justify-content-center forms-term autocomplete-negative-index2">
                     <div class="col-sm-12">
-                      <div class="form-group">
+                      <div>
                         <div class='forms-terms-area' (click)='openModal()'>
                           <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
-                          <label class='form-group forms-tem-accepted info-mobile-content'>
+                          <label class='forms-tem-accepted info-mobile-content'>
                             Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
                             <br>
                             <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
