--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -325,11 +325,11 @@
                   <!-- Terms -->
                   <div class="row justify-content-center forms-term">
                     <div class="col-sm-12">
-                      <div class="form-group">
+                      <div>
                         <label for="inputTermos">Termos e Condições</label>
                         <iframe class='form-control iframe' id="inputTermos" src="../assets/terms/terms.html"></iframe>
                       </div>
-                      <label class="form-group forms-tem-accepted">
+                      <label class="forms-tem-accepted">
                         Ao se cadastrar você concorda com os nossos Termos e Condições descritos acima.
                       </label>
                     </div>
