--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,19 +1,14 @@
-<section class='padding-top-and-bottom' id='contact'>
+<section class='padding-top-and-bottom {{ actualPage }}' id='contact'>
   <div class='container'>
     <div class='row'>
-      <div class='col-lg-4 col-sm-12 col-md-12'>
-        <h3>
-          Entre em contato
-        </h3>
-      </div>
-      <div class='col-lg-8 col-sm-12 col-md-12'>
+      <div class='contact-area col-lg-6 col-sm-12 col-md-12'>
+          <h3>
+              Entre em contato
+            </h3>
         <p>
           Contate o escritório mais próximo
         </p>
         <div class='contact-container'>
-          <label>
-            Cidade
-          </label>
           <select (change)='onSelect($event.target.value)'>
             <option value=''>-- Selecione uma cidade -- </option>
             <option *ngFor='let contact of contactList' value='{{contact.id}}'>{{ contact.city }}</option>
