--- a/src/app/slider-membership-host/slider-membership-host.component.scss
+++ b/src/app/slider-membership-host/slider-membership-host.component.scss
@@ -1,88 +1,15 @@
 @import "../../scss/global.scss";
 
+section.membrasia,
+section.host {
+    &.fadeOut {
+        display: none;
+    }
+}
+
 .slider-membrasia-host {
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 100%;
-
-    .swipe-area {
-        width: 100%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        .swipe-action {
-            width: 85%;
-            height: 100%;
-            position: absolute;
-            left: 7.5%;
-            top: 0;
-            z-index: 10;
-            cursor: pointer;
-        }
-    }
-
-    .footer-carousel-btn-left,
-    .footer-carousel-btn-right {
-        align-items: center;
-        display: flex;
-        color: $default;
-        box-sizing: border-box;
-        z-index: 100;
-        font-size: 40px;
-        z-index: 4;
-
-        i {
-            position: absolute;
-            cursor: pointer;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            transition: .3s;
-
-            &:hover {
-                transform: scale(1.05);
-            }
-
-            &.fa-chevron-left {
-                left: 2.5%;
-            }
-
-            &.fa-chevron-right {
-                right: 2.5%;
-            }
-        }
-    }
-
-    .carousel-container {
-        width: 100%;
-        min-height: 500px;
-        position: relative;
-        overflow: hidden;
-
-        .carousel-wrapper {
-            height: 100%;
-            width: 200%;
-            position: absolute;
-            left: 0;
-            top: 0;
-            display: flex;
-
-            .each-carousel-item {
-                width: 50%;
-                height: 100%;
-                box-sizing: border-box;
-                position: Relative;
-                float: left;
-                cursor: pointer;
-            }
-        }
-    }
 
     .membrasia {
         min-height: 500px;
@@ -253,42 +180,6 @@
 
     100% {
         margin-right: -5%;
-    }
-}
-
-#slider {
-
-    .footer-carousel-btn-right,
-    .footer-carousel-btn-left {
-        height: 100%;
-        width: 6.5%;
-        position: absolute;
-        right: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        cursor: pointer;
-
-        i {
-            right: auto
-        }
-    }
-
-    .footer-carousel-btn-right {
-        right: 0;
-
-        i {
-            right: auto
-        }
-    }
-
-    .footer-carousel-btn-left {
-        left: 0;
-
-        i {
-            left: auto;
-        }
     }
 }
 
