chore(slider-membrasia-host): change fadeIn/fadeOut without 'white' content

--- a/src/app/slider-membership-host/slider-membership-host.component.scss
+++ b/src/app/slider-membership-host/slider-membership-host.component.scss
@@ -2,14 +2,22 @@
 
 section.membrasia,
 section.host {
+    position: absolute !important;
+    left: 0;
+    top: 0;
+    width: 100%;
+    &.fadeIn {
+        z-index:2
+    }
     &.fadeOut {
-        display: none;
+        z-index: 1;
     }
 }
 
 .slider-membrasia-host {
     position: relative;
     width: 100%;
+    min-height: 500px;
 
     .membrasia {
         min-height: 500px;
