--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -282,21 +282,20 @@
 #modal {
     width: 100%;
     height: 100%;
-    left: 0;
-    top: 0;
-    position: fixed;
+    left:0;
+    top:0;
+    position:fixed;
     z-index: 1001;
-
+    padding: 45px 30px;
     .modal-bg {
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, .35);
+        background-color: rgba(0,0,0,.35);
         position: fixed;
         left: 0;
         top: 0;
         z-index: 2;
-    }
-
+    }    
     .close-modal-button {
         width: 30px;
         height: 30px;
@@ -304,12 +303,13 @@
         align-items: center;
         justify-content: center;
         position: fixed;
-        top: 1.5%;
+        top: 0;
         right: 0;
         border-radius: 50%;
-        font-size: 30px;
         z-index: 1003;
-        color: #3f77bc;
+        color: #fff;
+        font-size: 20px;
+        cursor: pointer;
     }
 }
 
