--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet (activate)="changeOfRoutes()"></router-outlet>
 
-<div id='content-snackbar'>
+<div id='content-snackbar' class='animated faster' [ngClass]="{fadeIn: cookies_policy, fadeOut: !cookies_policy}">
   <div id="snackbar">
     Este site usa cookies para assegurar que você tenha uma ótima experiência online.
     <a href="../../assets/politica_cookies_ptbr.pdf" target="_blank">
