--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,14 @@
     align-items: center;
     justify-content: center;
     z-index: 99999;
+    &.fadeOut {
+        display: none !important;
+    }
+    &.fadeIn {
+        display: flex !important;
+    }
 
     #snackbar {
-        visibility: hidden;
         /* Hidden by default. Visible on click */
         min-width: 250px;
         /* Set a default minimum width */
@@ -31,7 +36,6 @@
 
         /* Add a z-index if needed */
         &.show {
-            visibility: visible;
             /* Show the snackbar */
             /* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
       However, delay the fade out process for 2.5 seconds */
