--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -303,13 +303,19 @@
         align-items: center;
         justify-content: center;
         position: fixed;
-        top: 0;
-        right: 0;
+        top: 30px;
+        right: 20px;
         border-radius: 50%;
         z-index: 1003;
-        color: #fff;
-        font-size: 20px;
+        font-size: 32px;
         cursor: pointer;
+        color: #037ef3;
+        background-color: #fff;
+        padding: 0;
+        margin: 0;
+        .fas {
+            margin: 0;
+        }
     }
 }
 
