fix search icon color

--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -1167,3 +1167,7 @@ select:focus {
     background-repeat: no-repeat;
     background-position: right center;
 }
+
+i.fa-search {
+    color: #FFF !important;
+}
